Java 13 + Spring Boot 2.2.5: 1)compiled - ok, JUnitTest - ok 2) RTE (not started yet).